Update WgConnect.java